--- a/docs/application-tutorial/key_value_database.ipynb
+++ b/docs/application-tutorial/key_value_database.ipynb
@@ -236,7 +236,7 @@
    "source": [
     "This function takes any value, and a boolean flag that indicates if value is selected or not. Within homomorphic encryption circuits, we cannot compile this function as encrypted values cannot affect control flow. Instead, we turn this function into a lookup table.\n",
     "\n",
-    "Selected is preprended to the value, and function is modified to act as below.\n",
+    "Selected is prepended to the value, and function is modified to act as below.\n",
     "\n",
     "`keep_selected(i=0..15, 1) -> 0` \n",
     "`keep_selected(i=16..31, 0) -> i-16`\n",
