--- a/frontends/concrete-python/examples/key_value_database/key_value_database.ipynb
+++ b/frontends/concrete-python/examples/key_value_database/key_value_database.ipynb
@@ -550,23 +550,32 @@
     "        # Initialize the state to all zeros\n",
     "        self._state = np.zeros(STATE_SHAPE, dtype=np.int64)\n",
     "\n",
-    "        ## Input sets for initialization of the circuits\n",
-    "        # The input sets are used to initialize the circuits with the correct parameters\n",
+    "        sample_state = np.array(\n",
+    "            [\n",
+    "                [i % 2] + encode_key(i).tolist() + encode_value(i).tolist()\n",
+    "                for i in range(STATE_SHAPE[0])\n",
+    "            ]\n",
+    "        )\n",
     "\n",
-    "        # The input set for the query circuit\n",
-    "        inputset_binary = [\n",
+    "        insert_replace_inputset = [\n",
     "            (\n",
-    "                np.zeros(STATE_SHAPE, dtype=np.int64),  # state\n",
-    "                np.ones(NUMBER_OF_KEY_CHUNKS, dtype=np.int64) * (2**CHUNK_SIZE - 1),  # key\n",
+    "                # state\n",
+    "                sample_state,\n",
+    "                # key\n",
+    "                encode_key(i),\n",
+    "                # value\n",
+    "                encode_key(i),\n",
     "            )\n",
+    "            for i in range(20)\n",
     "        ]\n",
-    "        # The input set for the insert and replace circuits\n",
-    "        inputset_ternary = [\n",
+    "        query_inputset = [\n",
     "            (\n",
-    "                np.zeros(STATE_SHAPE, dtype=np.int64),  # state\n",
-    "                np.ones(NUMBER_OF_KEY_CHUNKS, dtype=np.int64) * (2**CHUNK_SIZE - 1),  # key\n",
-    "                np.ones(NUMBER_OF_VALUE_CHUNKS, dtype=np.int64) * (2**CHUNK_SIZE - 1),  # value\n",
+    "                # state\n",
+    "                sample_state,\n",
+    "                # key\n",
+    "                encode_key(i),\n",
     "            )\n",
+    "            for i in range(20)\n",
     "        ]\n",
     "\n",
     "        ## Circuit compilation\n",
@@ -599,7 +608,7 @@
     "\n",
     "        print(\"Compiling insertion circuit...\")\n",
     "        start = time.time()\n",
-    "        self._insert_circuit = insert_compiler.compile(inputset_ternary, configuration)\n",
+    "        self._insert_circuit = insert_compiler.compile(insert_replace_inputset, configuration)\n",
     "        end = time.time()\n",
     "        print(f\"(took {end - start:.3f} seconds)\")\n",
     "\n",
@@ -607,7 +616,7 @@
     "\n",
     "        print(\"Compiling replacement circuit...\")\n",
     "        start = time.time()\n",
-    "        self._replace_circuit = replace_compiler.compile(inputset_ternary, configuration)\n",
+    "        self._replace_circuit = replace_compiler.compile(insert_replace_inputset, configuration)\n",
     "        end = time.time()\n",
     "        print(f\"(took {end - start:.3f} seconds)\")\n",
     "\n",
@@ -615,7 +624,7 @@
     "\n",
     "        print(\"Compiling query circuit...\")\n",
     "        start = time.time()\n",
-    "        self._query_circuit = query_compiler.compile(inputset_binary, configuration)\n",
+    "        self._query_circuit = query_compiler.compile(query_inputset, configuration)\n",
     "        end = time.time()\n",
     "        print(f\"(took {end - start:.3f} seconds)\")\n",
     "\n",
@@ -1063,10 +1072,24 @@
   "execution": {
    "timeout": 10800
   },
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
