feat(frontend): refactor key value database example to use modules, test and benchmark it

--- a/frontends/concrete-python/examples/key_value_database/key_value_database.ipynb
+++ b/frontends/concrete-python/examples/key_value_database/key_value_database.ipynb
@@ -8,12 +8,7 @@
     "\n",
     "This is an interactive tutorial of an Encrypted Key Value Database. The database allows for three operations, **Insert, Replace, and Query**. All the operations are implemented as fully-homomorphic encrypted circuits.\n",
     "\n",
-    "In `frontends/concrete-python/examples/key_value_database/`, you will find the following files:\n",
-    "\n",
-    "- `static-size.py`: This file contains a static size database implementation, meaning that the number of entries is given as a parameter at the beginning.\n",
-    "- `dynamic-size.py`: This file contains a dynamic size database implementation, meaning that the database starts as a zero entry database, and is grown as needed.\n",
-    "\n",
-    "This tutorial goes over the statically-sized database implementation. The dynamic database implementation is very similar, and the reader is encouraged to look at the code to see the differences.\n"
+    "In `frontends/concrete-python/examples/key_value_database/static_size.py`, you can find the full implementation\n"
    ]
   },
   {
