feat(ci): update ruff

--- a/frontends/concrete-python/examples/floating_point/floating_point.ipynb
+++ b/frontends/concrete-python/examples/floating_point/floating_point.ipynb
@@ -26,7 +26,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "import concrete.fhe as fhe\n",
+    "from concrete import fhe\n",
     "from time import time\n",
     "\n",
     "from numpy.random import randint\n",
@@ -69,9 +69,11 @@
     "length_inputset = 100\n",
     "nb_test_samples = 16\n",
     "\n",
+    "\n",
     "@fhe.compiler({\"x\": \"encrypted\", \"y\": \"encrypted\"})\n",
     "def add_integers(x, y):\n",
     "    return x + y\n",
+    "\n",
     "\n",
     "# Compile\n",
     "inputset = [(randint(2**nb_bits), randint(2**nb_bits)) for _ in range(length_inputset)]\n",
@@ -83,8 +85,11 @@
     "for _ in range(nb_test_samples):\n",
     "    random_sample = (randint(2**nb_bits), randint(2**nb_bits))\n",
     "    assert circuit.encrypt_run_decrypt(*random_sample) == add_integers(*random_sample)\n",
-    "    \n",
-    "print(f\"Compilation and test look good, with FHE execution time of about {(time() - time_begin) / nb_test_samples:.2f} seconds per inference\")"
+    "\n",
+    "print(\n",
+    "    \"Compilation and test look good, with FHE execution time of about \"\n",
+    "    f\"{(time() - time_begin) / nb_test_samples:.2f} seconds per inference\"\n",
+    ")"
    ]
   },
   {
@@ -247,16 +252,25 @@
     "max_value_for_floats = 2.5\n",
     "scaling_factor = 100\n",
     "\n",
+    "\n",
     "@fhe.compiler({\"x\": \"encrypted\", \"y\": \"encrypted\"})\n",
     "def add_integers(x, y):\n",
     "    return x + y\n",
+    "\n",
     "\n",
     "def are_almost_the_same(a, b, threshold):\n",
     "    abs_diff = abs(b - a)\n",
     "    assert abs_diff <= threshold, f\"Too far {a=} {b=} {abs_diff=} > {threshold=}\"\n",
     "\n",
+    "\n",
     "# Compile\n",
-    "inputset = [(round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32), round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32)) for _ in range(length_inputset)]\n",
+    "inputset = [\n",
+    "    (\n",
+    "        round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32),\n",
+    "        round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32),\n",
+    "    )\n",
+    "    for _ in range(length_inputset)\n",
+    "]\n",
     "circuit = add_integers.compile(inputset)\n",
     "\n",
     "# Check\n",
@@ -269,29 +283,32 @@
     "    if verbose:\n",
     "        print(\"Showing an example\")\n",
     "        print(f\"{random_sample=}\")\n",
-    "    \n",
+    "\n",
     "    # Scale it and round\n",
-    "    scaled_sample = (round(random_sample[0] * scaling_factor).astype(np.uint32), round(random_sample[1] * scaling_factor).astype(np.uint32))\n",
+    "    scaled_sample = (\n",
+    "        round(random_sample[0] * scaling_factor).astype(np.uint32),\n",
+    "        round(random_sample[1] * scaling_factor).astype(np.uint32),\n",
+    "    )\n",
     "    if verbose:\n",
     "        print(f\"{scaled_sample=}\")\n",
-    "    \n",
+    "\n",
     "    # Encrypt\n",
     "    encrypted_scaled_sample = circuit.encrypt(*scaled_sample)\n",
-    "    \n",
+    "\n",
     "    # Computations in FHE\n",
     "    encrypted_scaled_result = circuit.run(*encrypted_scaled_sample)\n",
-    "    \n",
+    "\n",
     "    # Decrypt\n",
     "    scaled_result = circuit.decrypt(encrypted_scaled_result)\n",
     "    if verbose:\n",
     "        print(f\"{scaled_result=}\")\n",
-    "    \n",
-    "    # Unscale\n",
-    "    result = scaled_result * 1. / scaling_factor\n",
     "\n",
-    "    bounded_error = 2. / scaling_factor\n",
+    "    # Unscale\n",
+    "    result = scaled_result * 1.0 / scaling_factor\n",
+    "\n",
+    "    bounded_error = 2.0 / scaling_factor\n",
     "    clear_result = random_sample[0] + random_sample[1]\n",
-    "    \n",
+    "\n",
     "    if verbose:\n",
     "        print()\n",
     "        print(f\"FHE:   {result}\")\n",
@@ -301,8 +318,11 @@
     "    are_almost_the_same(result, clear_result, bounded_error)\n",
     "\n",
     "    verbose = False\n",
-    "    \n",
-    "print(f\"\\nCompilation and test look good, with FHE execution time of about {(time() - time_begin) / nb_test_samples:.2f} seconds per inference\")"
+    "\n",
+    "print(\n",
+    "    \"\\nCompilation and test look good, with FHE execution time of about \"\n",
+    "    f\"{(time() - time_begin) / nb_test_samples:.2f} seconds per inference\"\n",
+    ")"
    ]
   },
   {
@@ -398,12 +418,20 @@
     "scaling_factor = 8\n",
     "nb_test_samples = 10\n",
     "\n",
+    "\n",
     "@fhe.compiler({\"x\": \"encrypted\", \"y\": \"encrypted\"})\n",
     "def norm(x, y):\n",
     "    return np.round(fhe.univariate(lambda x: np.sqrt(x))(x**2 + y**2)).astype(np.int64)\n",
     "\n",
+    "\n",
     "# Compile\n",
-    "inputset = [(round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32), round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32)) for _ in range(length_inputset)]\n",
+    "inputset = [\n",
+    "    (\n",
+    "        round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32),\n",
+    "        round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32),\n",
+    "    )\n",
+    "    for _ in range(length_inputset)\n",
+    "]\n",
     "circuit = norm.compile(inputset, show_mlir=False)\n",
     "\n",
     "print(f\"Maximal bitwidth in the circuit: {circuit.graph.maximum_integer_bit_width()}\\n\")\n",
@@ -418,29 +446,32 @@
     "    if verbose:\n",
     "        print(\"Showing an example\")\n",
     "        print(f\"{random_sample=}\")\n",
-    "    \n",
+    "\n",
     "    # Scale it and round\n",
-    "    scaled_sample = (round(random_sample[0] * scaling_factor).astype(np.uint32), round(random_sample[1] * scaling_factor).astype(np.uint32))\n",
+    "    scaled_sample = (\n",
+    "        round(random_sample[0] * scaling_factor).astype(np.uint32),\n",
+    "        round(random_sample[1] * scaling_factor).astype(np.uint32),\n",
+    "    )\n",
     "    if verbose:\n",
     "        print(f\"{scaled_sample=}\")\n",
-    "    \n",
+    "\n",
     "    # Encrypt\n",
     "    encrypted_scaled_sample = circuit.encrypt(*scaled_sample)\n",
-    "    \n",
+    "\n",
     "    # Computations in FHE\n",
     "    encrypted_scaled_result = circuit.run(*encrypted_scaled_sample)\n",
-    "    \n",
+    "\n",
     "    # Decrypt\n",
     "    scaled_result = circuit.decrypt(encrypted_scaled_result)\n",
     "    if verbose:\n",
     "        print(f\"{scaled_result=}\")\n",
-    "    \n",
-    "    # Unscale\n",
-    "    result = scaled_result * 1. / scaling_factor\n",
     "\n",
-    "    bounded_error = 2. / scaling_factor\n",
-    "    clear_result = np.sqrt(random_sample[0]**2 + random_sample[1]**2)\n",
-    "    \n",
+    "    # Unscale\n",
+    "    result = scaled_result * 1.0 / scaling_factor\n",
+    "\n",
+    "    bounded_error = 2.0 / scaling_factor\n",
+    "    clear_result = np.sqrt(random_sample[0] ** 2 + random_sample[1] ** 2)\n",
+    "\n",
     "    if verbose:\n",
     "        print()\n",
     "        print(f\"FHE:   {result}\")\n",
@@ -450,8 +481,11 @@
     "    are_almost_the_same(result, clear_result, bounded_error)\n",
     "\n",
     "    verbose = False\n",
-    "    \n",
-    "print(f\"\\nCompilation and test look good, with FHE execution time of about {(time() - time_begin) / nb_test_samples:.2f} seconds per inference\")"
+    "\n",
+    "print(\n",
+    "    \"\\nCompilation and test look good, with FHE execution time of about \"\n",
+    "    f\"{(time() - time_begin) / nb_test_samples:.2f} seconds per inference\"\n",
+    ")"
    ]
   },
   {
@@ -515,19 +549,28 @@
     "scaling_factor = 8\n",
     "nb_test_samples = 8\n",
     "\n",
+    "\n",
     "def special_function_in_clear(x, y):\n",
     "    u = x**2\n",
     "    v = u + 4 * y\n",
     "    return v / 1.33\n",
     "\n",
+    "\n",
     "@fhe.compiler({\"x\": \"encrypted\", \"y\": \"encrypted\"})\n",
     "def special_function(x, y):\n",
     "    u = fhe.univariate(lambda x: x**2 // scaling_factor)(x)\n",
-    "    v = u + 4 * y \n",
+    "    v = u + 4 * y\n",
     "    return np.round(fhe.univariate(lambda x: x / 1.33)(v)).astype(np.int64)\n",
     "\n",
+    "\n",
     "# Compile\n",
-    "inputset = [(round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32), round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32)) for _ in range(length_inputset)]\n",
+    "inputset = [\n",
+    "    (\n",
+    "        round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32),\n",
+    "        round(scaling_factor * rand() * max_value_for_floats).astype(np.uint32),\n",
+    "    )\n",
+    "    for _ in range(length_inputset)\n",
+    "]\n",
     "circuit = special_function.compile(inputset, show_mlir=False)\n",
     "\n",
     "print(f\"Maximal bitwidth in the circuit: {circuit.graph.maximum_integer_bit_width()}\\n\")\n",
@@ -542,29 +585,32 @@
     "    if verbose:\n",
     "        print(\"Showing an example\")\n",
     "        print(f\"{random_sample=}\")\n",
-    "    \n",
+    "\n",
     "    # Scale it and round\n",
-    "    scaled_sample = (round(random_sample[0] * scaling_factor).astype(np.uint32), round(random_sample[1] * scaling_factor).astype(np.uint32))\n",
+    "    scaled_sample = (\n",
+    "        round(random_sample[0] * scaling_factor).astype(np.uint32),\n",
+    "        round(random_sample[1] * scaling_factor).astype(np.uint32),\n",
+    "    )\n",
     "    if verbose:\n",
     "        print(f\"{scaled_sample=}\")\n",
-    "    \n",
+    "\n",
     "    # Encrypt\n",
     "    encrypted_scaled_sample = circuit.encrypt(*scaled_sample)\n",
-    "    \n",
+    "\n",
     "    # Computations in FHE\n",
     "    encrypted_scaled_result = circuit.run(*encrypted_scaled_sample)\n",
-    "    \n",
+    "\n",
     "    # Decrypt\n",
     "    scaled_result = circuit.decrypt(encrypted_scaled_result)\n",
     "    if verbose:\n",
     "        print(f\"{scaled_result=}\")\n",
-    "    \n",
-    "    # Unscale\n",
-    "    result = scaled_result * 1. / scaling_factor\n",
     "\n",
-    "    bounded_error = 3. / scaling_factor\n",
+    "    # Unscale\n",
+    "    result = scaled_result * 1.0 / scaling_factor\n",
+    "\n",
+    "    bounded_error = 3.0 / scaling_factor\n",
     "    clear_result = special_function_in_clear(*random_sample)\n",
-    "    \n",
+    "\n",
     "    if verbose:\n",
     "        print()\n",
     "        print(f\"FHE:   {result}\")\n",
@@ -575,7 +621,10 @@
     "\n",
     "    verbose = False\n",
     "\n",
-    "print(f\"\\nCompilation and test look good, with FHE execution time of about {(time() - time_begin) / nb_test_samples:.2f} seconds per inference\")"
+    "print(\n",
+    "    \"\\nCompilation and test look good, with FHE execution time of about \"\n",
+    "    f\"{(time() - time_begin) / nb_test_samples:.2f} seconds per inference\"\n",
+    ")"
    ]
   },
   {
