--- a/frontends/concrete-python/examples/key_value_database/key_value_database.ipynb
+++ b/frontends/concrete-python/examples/key_value_database/key_value_database.ipynb
@@ -225,8 +225,7 @@
     "def keep_selected(value, selected):\n",
     "    if selected:\n",
     "        return value\n",
-    "    else:\n",
-    "        return 0"
+    "    return 0"
    ]
   },
   {
@@ -669,7 +668,7 @@
     "    # The state of the database is updated with the new key-value pair\n",
     "    def insert(self, key, value):\n",
     "        print()\n",
-    "        print(f\"Inserting...\")\n",
+    "        print(\"Inserting...\")\n",
     "        start = time.time()\n",
     "        self._state = self._insert_circuit.encrypt_run_decrypt(\n",
     "            self._state, encode_key(key), encode_value(value)\n",
@@ -684,7 +683,7 @@
     "    # The state of the database is updated with the new key-value pair\n",
     "    def replace(self, key, value):\n",
     "        print()\n",
-    "        print(f\"Replacing...\")\n",
+    "        print(\"Replacing...\")\n",
     "        start = time.time()\n",
     "        self._state = self._replace_circuit.encrypt_run_decrypt(\n",
     "            self._state, encode_key(key), encode_value(value)\n",
@@ -698,7 +697,7 @@
     "    # Returns the value associated with the key or None if the key is not found\n",
     "    def query(self, key):\n",
     "        print()\n",
-    "        print(f\"Querying...\")\n",
+    "        print(\"Querying...\")\n",
     "        start = time.time()\n",
     "        result = self._query_circuit.encrypt_run_decrypt(self._state, encode_key(key))\n",
     "        end = time.time()\n",
@@ -927,7 +926,7 @@
     "# Test: Query Not Found\n",
     "# Query the database for the key 4\n",
     "# None should be returned\n",
-    "assert db.query(4) == None"
+    "assert db.query(4) is None"
    ]
   },
   {
