--- a/frontends/concrete-python/examples/levenshtein_distance/IBAN_name_check.ipynb
+++ b/frontends/concrete-python/examples/levenshtein_distance/IBAN_name_check.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from levenshtein_distance import *\n",
+    "from levenshtein_distance import Alphabet, LevenshteinDistance\n",
     "from time import time"
    ]
   },
@@ -60,17 +60,19 @@
     "    st = st.lower()\n",
     "\n",
     "    # Replace - and . by spaces\n",
-    "    st = st.replace('-', ' ')\n",
-    "    st = st.replace('.', ' ')\n",
-    "    \n",
+    "    st = st.replace(\"-\", \" \")\n",
+    "    st = st.replace(\".\", \" \")\n",
+    "\n",
     "    # Sort the words and join\n",
     "    words = st.split()\n",
     "    st = \"\".join(sorted(words))\n",
     "\n",
     "    return st\n",
     "\n",
-    "def compare_IBAN_names(string0: str, string1: str, fhe_or_simulate: str):\n",
-    "    \"\"\"Compare two IBAN names: first, normalize the strings, then compute in FHE (look in \n",
+    "\n",
+    "# N802 is for names in capital, like IBAN\n",
+    "def compare_IBAN_names(string0: str, string1: str, fhe_or_simulate: str):  # noqa: N802\n",
+    "    \"\"\"Compare two IBAN names: first, normalize the strings, then compute in FHE (look in\n",
     "    calculate_and_return for FHE details).\"\"\"\n",
     "    # Normalize strings\n",
     "    string0 = normalized_string(string0)\n",
@@ -78,15 +80,20 @@
     "    max_string_length = max(len(string0), len(string1))\n",
     "\n",
     "    alphabet = Alphabet.init_by_name(\"name\")\n",
-    "    levenshtein_distance = LevenshteinDistance(alphabet, max_string_length, show_mlir = False, show_optimizer = False)\n",
+    "    levenshtein_distance = LevenshteinDistance(\n",
+    "        alphabet, max_string_length, show_mlir=False, show_optimizer=False\n",
+    "    )\n",
     "    time_begin = time()\n",
-    "    distance = levenshtein_distance.calculate_and_return(string0, string1, mode=fhe_or_simulate)    \n",
+    "    distance = levenshtein_distance.calculate_and_return(string0, string1, mode=fhe_or_simulate)\n",
     "    time_end = time()\n",
-    "    \n",
+    "\n",
     "    max_len = max(len(string0), len(string1))\n",
     "    similarity = (max_len - distance) / max_len\n",
     "\n",
-    "    print(f\"Similarity between the two strings is {similarity:.4f}, computed in {time_end - time_begin: .2f} seconds\")\n",
+    "    print(\n",
+    "        f\"Similarity between the two strings is {similarity:.4f}, \"\n",
+    "        f\"computed in {time_end - time_begin: .2f} seconds\"\n",
+    "    )\n",
     "    return similarity"
    ]
   },
@@ -136,7 +143,7 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"John Doe\"\n",
     "\n",
-    "assert compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate) == 1.0"
+    "assert compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate) == 1.0"
    ]
   },
   {
@@ -165,7 +172,7 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"Doe John\"\n",
     "\n",
-    "assert compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate) == 1.0"
+    "assert compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate) == 1.0"
    ]
   },
   {
@@ -194,7 +201,7 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"John Do\"\n",
     "\n",
-    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate), 2) == 0.86"
+    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate), 2) == 0.86"
    ]
   },
   {
@@ -223,7 +230,7 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"John W Doe\"\n",
     "\n",
-    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate), 2) == 0.88"
+    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate), 2) == 0.88"
    ]
   },
   {
@@ -252,7 +259,7 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"John-Doe\"\n",
     "\n",
-    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate), 2) == 1.0"
+    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate), 2) == 1.0"
    ]
   },
   {
@@ -281,7 +288,7 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"Gill Cot\"\n",
     "\n",
-    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate), 2) == 0.14"
+    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate), 2) == 0.14"
    ]
   },
   {
@@ -312,13 +319,13 @@
     "string0 = \"John Doe\"\n",
     "string1 = \"John Poe\"\n",
     "\n",
-    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate), 2) == 0.14\n",
+    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate), 2) == 0.14\n",
     "\n",
     "# One typo in the last letter\n",
     "string0 = \"John Doe\"\n",
     "string1 = \"John Doy\"\n",
     "\n",
-    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate = fhe_or_simulate), 2) == 0.86"
+    "assert round(compare_IBAN_names(string0, string1, fhe_or_simulate=fhe_or_simulate), 2) == 0.86"
    ]
   },
   {
