--- a/frontends/concrete-python/examples/sha256/sha256.ipynb
+++ b/frontends/concrete-python/examples/sha256/sha256.ipynb
@@ -217,14 +217,8 @@
     "def right_rotate(chunks, rotate_amount):\n",
     "    x = rotate_amount // WIDTH\n",
     "    y = rotate_amount % WIDTH\n",
-    "    if x != 0:\n",
-    "        rotated_chunks = right_rotate_list_of_chunks(chunks, x)\n",
-    "    else:\n",
-    "        rotated_chunks = chunks\n",
-    "    if y != 0:\n",
-    "        rotated = rotate_less_than_width(rotated_chunks, y)\n",
-    "    else:\n",
-    "        rotated = rotated_chunks\n",
+    "    rotated_chunks = right_rotate_list_of_chunks(chunks, x) if x != 0 else chunks\n",
+    "    rotated = rotate_less_than_width(rotated_chunks, y) if y != 0 else rotated_chunks\n",
     "\n",
     "    return rotated\n",
     "\n",
@@ -232,10 +226,8 @@
     "def right_shift(chunks, shift_amount):\n",
     "    x = shift_amount // WIDTH\n",
     "    y = shift_amount % WIDTH\n",
-    "    if x != 0:\n",
-    "        shifted_chunks = right_shift_list_of_chunks(chunks, x)\n",
-    "    else:\n",
-    "        shifted_chunks = chunks\n",
+    "    shifted_chunks = right_shift_list_of_chunks(chunks, x) if x != 0 else chunks\n",
+    "\n",
     "    if y != 0:\n",
     "        # shift within chunks\n",
     "        raised_low_bits = fhe.univariate(lambda x: (x % 2**y) << (WIDTH - y))(shifted_chunks)\n",
@@ -411,19 +403,19 @@
     "# Used in main loop\n",
     "\n",
     "\n",
-    "def S0(a_word):\n",
+    "def S0(a_word):  # noqa: N802\n",
     "    return right_rotate(a_word, 2) ^ right_rotate(a_word, 13) ^ right_rotate(a_word, 22)\n",
     "\n",
     "\n",
-    "def S1(e_word):\n",
+    "def S1(e_word):  # noqa: N802\n",
     "    return right_rotate(e_word, 6) ^ right_rotate(e_word, 11) ^ right_rotate(e_word, 25)\n",
     "\n",
     "\n",
-    "def Ch(e_word, f_word, g_word):\n",
+    "def Ch(e_word, f_word, g_word):  # noqa: N802\n",
     "    return (e_word & f_word) ^ ((2**WIDTH - 1 - e_word) & g_word)\n",
     "\n",
     "\n",
-    "def Maj(a_word, b_word, c_word):\n",
+    "def Maj(a_word, b_word, c_word):  # noqa: N802\n",
     "    return (a_word & b_word) ^ (a_word & c_word) ^ (b_word & c_word)\n",
     "\n",
     "\n",
@@ -676,7 +668,8 @@
     "\n",
     "text = (\n",
     "    b\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. \"\n",
-    "    b\"Curabitur bibendum, urna eu bibendum egestas, neque augue eleifend odio, et sagittis viverra. and more than 150\"\n",
+    "    b\"Curabitur bibendum, urna eu bibendum egestas, neque augue eleifend odio, \"\n",
+    "    b\"et sagittis viverra. and more than 150\"\n",
     ")\n",
     "\n",
     "result = sha256(sha256_preprocess(np.frombuffer(text, dtype=np.uint8)))\n",
@@ -697,7 +690,7 @@
    },
    "outputs": [],
    "source": [
-    "class HomomorphicSHA:\n",
+    "class HomomorphicSHA:  # noqa: N802\n",
     "    circuit: fhe.Circuit\n",
     "\n",
     "    def __init__(self, input_size_in_bytes=150, number_of_rounds=64) -> None:\n",
@@ -723,13 +716,13 @@
     "            verbose=False,\n",
     "        )\n",
     "\n",
-    "    def getSHA(self, data):\n",
+    "    def getSHA(self, data):  # noqa: N802\n",
     "        assert (\n",
     "            len(data) == self.input_size_in_bytes\n",
     "        ), f\"Input size is not correct, should be {self.input_size_in_bytes} bytes/characters\"\n",
     "        return self.circuit.encrypt_run_decrypt(sha256_preprocess(data))\n",
     "\n",
-    "    def getPlainSHA(self, data):\n",
+    "    def getPlainSHA(self, data):  # noqa: N802\n",
     "        return sha256(sha256_preprocess(data), self.number_of_rounds)"
    ]
   },
@@ -797,12 +790,14 @@
     "accept_a_very_long_run = False\n",
     "if not accept_a_very_long_run:\n",
     "    print(\n",
-    "        \"This cell is disabled. It can takes hours. If you want to run this cell, set accept_a_very_long_run=True\"\n",
+    "        \"This cell is disabled. It can takes hours. If you want to run this \"\n",
+    "        \"cell, set accept_a_very_long_run=True\"\n",
     "    )\n",
     "else:\n",
     "    text = (\n",
     "        b\"Lorem ipsum dolor sit amet, consectetur adipiscing elit. \"\n",
-    "        b\"Curabitur bibendum, urna eu bibendum egestas, neque augue eleifend odio, et sagittis viverra.\"\n",
+    "        b\"Curabitur bibendum, urna eu bibendum egestas, neque augue eleifend odio, \"\n",
+    "        b\"et sagittis viverra.\"\n",
     "    )\n",
     "    input_bytes = np.frombuffer(text, dtype=np.uint8)\n",
     "    encrypted_evaluation = sha.getSHA(input_bytes)\n",
