feat(frontend-python): adding jupyter tests
and fixing some broken jupyter notebooks

--- a/frontends/concrete-python/examples/sha256/sha256.ipynb
+++ b/frontends/concrete-python/examples/sha256/sha256.ipynb
@@ -51,6 +51,7 @@
     "\n",
     "# Required libraries\n",
     "from concrete import fhe\n",
+    "import platform\n",
     "import numpy as np"
    ]
   },
@@ -628,7 +629,7 @@
     "\n",
     "        # Accumulating the results\n",
     "        for j in range(8):\n",
-    "            h_chunks[j] = add_two_32_bits(h_chunks[j], working_vars[j])\n",
+    "            h_chunks[j] = fhe.array(add_two_32_bits(h_chunks[j], working_vars[j]))\n",
     "    return h_chunks"
    ]
   },
@@ -711,7 +712,7 @@
     "                enable_unsafe_features=True,\n",
     "                use_insecure_key_cache=True,\n",
     "                insecure_key_cache_location=\".keys\",\n",
-    "                dataflow_parallelize=True,\n",
+    "                dataflow_parallelize=platform.system() != \"Darwin\",\n",
     "            ),\n",
     "            verbose=False,\n",
     "        )\n",
