--- a/frontends/concrete-python/examples/floating_point/floating_point.ipynb
+++ b/frontends/concrete-python/examples/floating_point/floating_point.ipynb
@@ -640,9 +640,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python 3.10.7 64-bit",
    "language": "python",
-   "name": ".venv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
