--- a/frontends/concrete-python/examples/levenshtein_distance/IBAN_name_check.ipynb
+++ b/frontends/concrete-python/examples/levenshtein_distance/IBAN_name_check.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "## Define the comparison functions\n",
     "\n",
-    "FHE computation will happen in `calculate_and_return`, if `fhe_or_simulate` is set to `fhe`."
+    "FHE computation will happen in `calculate`, if `fhe_or_simulate` is set to `fhe`."
    ]
   },
   {
@@ -73,7 +73,7 @@
     "# N802 is for names in capital, like IBAN\n",
     "def compare_IBAN_names(string0: str, string1: str, fhe_or_simulate: str):  # noqa: N802\n",
     "    \"\"\"Compare two IBAN names: first, normalize the strings, then compute in FHE (look in\n",
-    "    calculate_and_return for FHE details).\"\"\"\n",
+    "    calculate for FHE details).\"\"\"\n",
     "    # Normalize strings\n",
     "    string0 = normalized_string(string0)\n",
     "    string1 = normalized_string(string1)\n",
@@ -84,7 +84,7 @@
     "        alphabet, max_string_length, show_mlir=False, show_optimizer=False\n",
     "    )\n",
     "    time_begin = time()\n",
-    "    distance = levenshtein_distance.calculate_and_return(string0, string1, mode=fhe_or_simulate)\n",
+    "    distance = levenshtein_distance.calculate(string0, string1, mode=fhe_or_simulate)\n",
     "    time_end = time()\n",
     "\n",
     "    max_len = max(len(string0), len(string1))\n",
