chore(frontend/python): lint

--- a/frontends/concrete-python/examples/pir/PIR.ipynb
+++ b/frontends/concrete-python/examples/pir/PIR.ipynb
@@ -19,8 +19,6 @@
    "source": [
     "# Importing some libraries\n",
     "\n",
-    "import argparse\n",
-    "import random\n",
     "import time\n",
     "\n",
     "import numpy as np\n",
@@ -140,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "91c766c2-d30a-4e67-bf12-25e4083c67c7",
    "metadata": {},
    "outputs": [
@@ -181,8 +179,8 @@
     "        (make_one_hot_vector(np.random.randint(database_length), database_length), database)\n",
     "        for _ in range(inputset_length)\n",
     "    ]\n",
-    "    # Also add the extreme value, which would actually be sufficient alone, as it reaches the maximal\n",
-    "    # values in get_ith_element_of_database\n",
+    "    # Also add the extreme value, which would actually be sufficient alone, as it reaches the\n",
+    "    # maximal values in get_ith_element_of_database\n",
     "    inputset.append((make_one_hot_vector(np.argmax(database), database_length), database))\n",
     "\n",
     "    compiler = fhe.Compiler(\n",
@@ -206,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "5c686f23-5774-40c3-88bc-f90417b47f7e",
    "metadata": {},
    "outputs": [
@@ -244,7 +242,9 @@
     "\n",
     "        if verbose:\n",
     "            print(\n",
-    "                f\"FHE computation done in {(time_end - time_begin) * 1000:.1f} milliseconds -- database is {database_length} (2**{log_database_length}) elements of {database_output_bits} bits\"\n",
+    "                f\"FHE computation done in {(time_end - time_begin) * 1000:.1f} milliseconds \"\n",
+    "                f\"-- database is {database_length} (2**{log_database_length}) elements of \"\n",
+    "                f\"{database_output_bits} bits\"\n",
     "            )\n",
     "\n",
     "        # Decrypt the result on the client side\n",
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "3a573631-0bdf-4969-85c1-c5da9afcc2bf",
    "metadata": {},
    "outputs": [
@@ -328,7 +328,9 @@
     "    mean_time = np.mean(times)\n",
     "    timings_dic[(database_input_bits, database_output_bits)] = mean_time\n",
     "    print(\n",
-    "        f\"For a database of 2**{str(database_input_bits):>2s} elements of {str(database_output_bits):>2s} bits, average execution time is {1000 * mean_time:.1f} milliseconds\"\n",
+    "        f\"For a database of 2**{str(database_input_bits):>2s} elements of \"\n",
+    "        f\"{str(database_output_bits):>2s} bits, average execution time is \"\n",
+    "        f\"{1000 * mean_time:.1f} milliseconds\"\n",
     "    )"
    ]
   },
@@ -344,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "fe2d50a5-0ba4-4433-9573-cf83c98b7db0",
    "metadata": {},
    "outputs": [
@@ -446,7 +448,9 @@
     "\n",
     "        if verbose:\n",
     "            print(\n",
-    "                f\"FHE computation done in {(time_end - time_begin) * 1000:.1f} milliseconds -- database is {database_length} (2**{log_database_length}) elements of {database_output_bits} bits\"\n",
+    "                f\"FHE computation done in {(time_end - time_begin) * 1000:.1f} milliseconds -- \"\n",
+    "                f\"database is {database_length} (2**{log_database_length}) elements of \"\n",
+    "                f\"{database_output_bits} bits\"\n",
     "            )\n",
     "\n",
     "        # Decrypt the result on the client side\n",
@@ -458,7 +462,10 @@
     "        # And check the computations worked fine\n",
     "        assert (\n",
     "            y == database[random_index]\n",
-    "        ), f\"{y} {y:x} {y_bits} {y_bits[0]:x} {y_bits[1]:x} {y_bits[2]:x} {y_bits[3]:x} {database[random_index]:x}\"\n",
+    "        ), (\n",
+    "            f\"{y} {y:x} {y_bits} {y_bits[0]:x} {y_bits[1]:x} {y_bits[2]:x} \"\n",
+    "            f\"{y_bits[3]:x} {database[random_index]:x}\"\n",
+    "        )\n",
     "\n",
     "    return times\n",
     "\n",
@@ -468,7 +475,9 @@
     "    database, circuit, how_many_tests=how_many_tests, verbose=False\n",
     ")\n",
     "print(\n",
-    "    f\"For a database of 2**{str(database_input_bits):>2s} elements of {str(database_output_bits):>2s} bits with 4 sub-databases, average execution time is {1000 * np.mean(times):.1f} milliseconds\"\n",
+    "    f\"For a database of 2**{str(database_input_bits):>2s} elements of \"\n",
+    "    f\"{str(database_output_bits):>2s} bits with 4 sub-databases, \"\n",
+    "    f\"average execution time is {1000 * np.mean(times):.1f} milliseconds\"\n",
     ")"
    ]
   },
@@ -504,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "9dbf947e-4703-432e-9195-5e0e38760f3a",
    "metadata": {},
    "outputs": [
@@ -559,7 +568,9 @@
     "        )\n",
     "\n",
     "        print(\n",
-    "            f\"Estimated time would be {str(estimated_time):>8s} seconds for {str(number_of_subdatabases):>8s} DBs of {(database_input_bits, database_output_bits)}\"\n",
+    "            f\"Estimated time would be {str(estimated_time):>8s} seconds for \"\n",
+    "            f\"{str(number_of_subdatabases):>8s} DBs of \"\n",
+    "            f\"{(database_input_bits, database_output_bits)}\"\n",
     "        )\n",
     "\n",
     "        if best_combination is None or estimated_time < best_combination[0]:\n",
@@ -571,7 +582,8 @@
     "            )\n",
     "\n",
     "    print(\n",
-    "        f\"\\nBest combination: {best_combination[0]} seconds for a DB of {expected_total_bits} bits\\n\"\n",
+    "        f\"\\nBest combination: {best_combination[0]} seconds for a DB of \"\n",
+    "        f\"{expected_total_bits} bits\\n\"\n",
     "    )\n",
     "\n",
     "\n",
